# vicarious

./: LICENSE  README  SDL_main.c  vicarious.cabal
media/sprites/: clean  process  scale
src/: .ghci  Game.hs  Main.hs
src/Game/: Assets.hs  Data.hs  Direction.hs  Events.hs  Monad.hs  Prelude.hs  Sprite.hs  Wire.hs
