name:          vicarious
version:       0.1.0.0
homepage:      http://github.com/zimothy/vicarious
license:       MIT
license-file:  LICENSE
author:        Timothy Jones
maintainer:    Timothy Jones <git@zimothy.com>
copyright:     (c) 2013 Timothy Jones
category:      Game
build-type:    Simple
cabal-version: >= 1.10
synopsis:      A game for Pixel Jam 2013.

flag development
  description: Disables warnings as errors and optimisations.
  default:     False

executable vicarious
  hs-source-dirs:     src
  main-is:            Game.hs
  default-extensions: NoImplicitPrelude
  default-language:   Haskell2010
  pkgconfig-depends:  sdl
  c-sources:          SDL_main.c

  if flag(development)
    ghc-options: -Wall -no-hs-main
  else
    ghc-options: -Wall -Werror -O2 -funbox-strict-fields -no-hs-main

  other-modules:
    Game.Prelude
    Game.Sprite

  build-depends:
    base          >= 4.6.0 && < 4.7,
    bifunctors    >= 3.2.0 && < 3.3,
    contravariant >= 0.4.4 && < 0.5,
    lens          >= 3.9.0 && < 3.10,
    SDL           >= 0.6.5 && < 0.7,
    SDL-image     >= 0.6.1 && < 0.7

